--- a/styles/layout.css
+++ b/styles/layout.css
@@ -6,11 +6,12 @@
 .advertise,
 .footer{
     background-color: bisque;
-    border: 1.5px solid tomato;
+    border: 2px solid tomato;
     border-radius:5px;
     padding: 5px;
+    
 }
-/* .header{
+.header{
     grid-area:header;
 }
 .nav{
@@ -30,16 +31,54 @@
 }
 .container{
     display: grid;
-    grid-template-areas: 
+    /* grid-template-areas: 
     "nav     nav             nav"
-    "header  main         advertise"
+    "header  sidebar         advertise"
     "header    main         advertise"
-    "footer     footer      sidebar";
-
+    "footer     footer      footer"; */
+    /* grid-template-areas: 
+    "header header"
+    "nav    main  "
+    "sidebar   footer"
+    "sidebar    advertise"; */
+    /* grid-template-areas:
+     "header    header  header  header"
+     "nav   main    sidebar advertise"
+     "nav   footer  footer advertise "
+     ; */
+    grid-template-areas:
+    "header header  header"
+    "nav    main    sidebar"
+    "nav    main    advertise"
+    "footer footer  footer"
+    ;
     gap:20px;
-} */
-
-.container{
+    
+}
+/* responsive media query */
+@media screen and (max-width:576.36px) {
+    .container{
+        grid-template-areas:
+        "header"
+        "nav"
+        "main"
+        "sidebar"
+        "advertise"
+        "footer"
+        ;
+    }
+}
+/* media query for medium devices */
+@media screen and (min-width:576.37px) and (max-width:776px) {
+    .container{
+        grid-template-areas: 
+        "header header"
+        "nav    nav"
+        "sidebar    main"
+        "advertise  footer";
+    }
+}
+/* .container{
     display: grid;
     grid-template-columns:repeat(3,1fr);
     grid-template-rows: 320px 60px;
@@ -51,4 +90,4 @@
 }
 .footer,.advertise{
     grid-column: span 2;
-}
+} */
